# amazon-kinesis-video-streams-webrtc-sdk-c

./: .gitignore  .gitmodules  CMakeLists.txt  ChannelInfo_8c.html  ChannelInfo_8h.html  ChannelInfo_8h_source.html  Client_8c.html  ConnectionListener_8c.html  ConnectionListener_8h.html  ConnectionListener_8h_source.html  Crypto_8c.html  Crypto_8h.html  Crypto_8h_source.html  DataChannel_8c.html  DataChannel_8h.html  DataChannel_8h_source.html  Deserialize_8c.html  Dtls_8c.html  Dtls_8h.html  Dtls_8h_source.html  Dtls__mbedtls_8c.html  Dtls__openssl_8c.html  FileCache_8c.html  FileCache_8h.html  FileCache_8h_source.html  IOBuffer_8c.html  IOBuffer_8h.html  IOBuffer_8h_source.html  IceAgentStateMachine_8c.html  IceAgentStateMachine_8h.html  IceAgentStateMachine_8h_source.html  IceAgent_8c.html  IceAgent_8h.html  IceAgent_8h_source.html  IceUtils_8c.html  IceUtils_8h.html  IceUtils_8h_source.html  Include_8h.html  Include_8h_source.html  Include__i_8h.html  (+509 more)
CMake/: Utilities.cmake
CMake/Dependencies/: libkvsCommonLws-CMakeLists.txt  libmbedtls-CMakeLists.txt  libprovision-CMakeLists.txt  libwebsockets-CMakeLists.txt  libwslay-CMakeLists.txt
configs/: config_mbedtls.h
docs/: twcc_estimation.md
libraries/: CMakeLists.txt
libraries/posix/: mbedtls_pkcs11_posix.c  mbedtls_posix.c  openssl_pkcs11_posix.c  openssl_pkcs11_posix.h  openssl_posix.c
samples/: CMakeLists.txt  CacheData.c  Common.c  Readme.md  Samples.h  https_server.c  kvsWebRTCClientMaster.c  kvsWebRTCClientMasterGstreamerSample.c  kvsWebRTCClientMasterWithProvisioning.c  kvsWebRTCClientViewer.c
samples/fleetProvisioning/: core_mqtt_config.h  fleet_provisioning_config.h  fleet_provisioning_serializer.c  fleet_provisioning_with_crt.c  mbedtls_pkcs11_posix.c  mbedtls_posix.c  mqtt_operations.c  mqtt_operations.h  pkcs11_operations.c  pkcs11_operations.h
src/include/kvs/: WebRTCClient.h  common.h  common_defs.h  config.h  error.h  platform_utils.h  stats.h  webrtc_client.h
src/source/: Include_i.h
src/source/ApiCall/: http_api.c  http_api.h  http_api_rsp.c  http_helper.c  netio.c  wss_api.c  wss_api.h  wss_api_rsp.c  wss_client.c  wss_client.h
src/source/Credential/: auth.c  auth.h  aws_signer_v4.c  file_credential_provider.c  file_credential_provider.h  iot_credential_provider.c  iot_credential_provider.h  request_info.c  request_info.h  static_credential_provider.c  static_credential_provider.h
src/source/Crypto/: Crypto.c  Crypto.h  Dtls.c  Dtls.h  Dtls_mbedtls.c  Dtls_openssl.c  IOBuffer.c  IOBuffer.h  Tls.c  Tls.h  Tls_mbedtls.c  Tls_openssl.c
src/source/Ice/: ConnectionListener.c  ConnectionListener.h  IceAgent.c  IceAgent.h  IceAgentStateMachine.c  IceAgentStateMachine.h  IceUtils.c  IceUtils.h  NatBehaviorDiscovery.c  NatBehaviorDiscovery.h  TurnConnection.c  TurnConnection.h  ice_agent_fsm.h  ice_utils.c
src/source/Metrics/: Metrics.c  Metrics.h
src/source/Net/: Network.c  Network.h  SocketConnection.c  SocketConnection.h
src/source/PeerConnection/: DataChannel.c  DataChannel.h  JitterBuffer.c  JitterBuffer.h  PeerConnection.c  PeerConnection.h  Retransimitter.c  Retransmitter.c  Retransmitter.h  Rtcp.c  Rtcp.h  Rtp.c  Rtp.h  SessionDescription.c  SessionDescription.h
src/source/Rtcp/: RollingBuffer.c  RollingBuffer.h  RtcpPacket.c  RtcpPacket.h  RtpRollingBuffer.c
src/source/Rtp/: RtpPacket.c  RtpPacket.h
src/source/Rtp/Codecs/: RtpG711Payloader.c  RtpH264Payloader.c
src/source/Sctp/: Sctp.c  Sctp.h
src/source/Sdp/: Deserialize.c  Serialize.c
src/source/Signaling/: ChannelInfo.c  ChannelInfo.h  Client.c  FileCache.c  FileCache.h  HttpHelper.c  Signaling.c  Signaling.h  StateMachine.c  StateMachine.h
src/source/Srtp/: SrtpSession.c  SrtpSession.h
src/source/StateMachine/: state_machine.c  state_machine.h
src/source/Stun/: Stun.c  Stun.h
src/source/Utils/: Allocators.c  Base64.c  Base64.h  Crc32.c  Directory.c  DoubleLinkedList.c  Endianness.c  Endianness.h  FileIo.c  FileIo.h  FileLogger.c  HashTable.c  HashTable.h  Hex.c  InstrumentedAllocators.c  Logger.c  Logger.h  Mutex.c  Semaphore.c  SingleLinkedList.c  SingleLinkedList.h  StackQueue.c  StackQueue.h  String.c  Tags.c  Thread.c  Thread.h  Time.c  TimerQueue.c  TimerQueue.h  Version.c
src/source/api_call/: wss_client.c
src/source/crypto/: crypto.c  dtls.c  dtls_mbedtls.c  dtls_openssl.c  io_buffer.c  tls.c  tls.h  tls_mbedtls.c  tls_openssl.c
src/source/ice/: connection_listener.c  ice_agent.c  ice_agent.h  ice_agent_fsm.c  ice_agent_fsm.h  ice_utils.c  ice_utils.h  turn_connection.c  turn_connection.h
src/source/net/: network.c  network.h  socket_connection.c  socket_connection.h
src/source/sctp/: sctp_session.h
src/source/signaling/: client.c  file_cache.c  file_cache.h
src/source/srtp/: srtp_session.c
src/source/stun/: stun.c  stun.h
src/source/utils/: endianness.h  fileio.h  time_port.h  timer_queue.c  timer_queue.h
tst/: DataChannelApiTest.cpp  DataChannelFunctionalityTest.cpp  IceApiTest.cpp  IceFunctionalityTest.cpp  MetricsApiTest.cpp  PeerConnectionApiTest.cpp  PeerConnectionFunctionalityTest.cpp  RtcpFunctionalityTest.cpp  SdpApiTest.cpp  StunFunctionalityTest.cpp  TurnConnectionFunctionalityTest.cpp
tst/suppressions/: TSAN.supp
